2007-11-13  Torsten Rahn  <rahn@kde.org>
    
    * src/lib/PlaceMarkPainter.{h,cpp}: Fix black labels on dark maps
    * src/lib/MarbleModel.cpp: Fix black labels on dark maps

    This is just a quick and dirty workaround that needs to get removed
    later on.

2007-11-13  Torsten Rahn  <rahn@kde.org>
    
    * src/lib/TileCreator.{h,cpp}: Fix TileCreator bug
    * src/lib/TileCreatorDialog.{h,cpp}: Fix TileCreator bug
    * src/lib/MarbleModel.cpp: Fix TileCreator bug

2007-11-12  Inge Wallin  <inge@lysator.liu.se>

	APIDOX
	* src/lib/geodata/data/GeoDataLabelStyle.h: Add APIDOX

	APIDOX
	* src/lib/geodata/data/GeoDataColorStyle.h: Add APIDOX

	APIDOX
	* src/lib/geodata/data/GeoDataStyle.h: Add APIDOX

	APIDOX
	* src/lib/geodata/data/GeoDataStyleSelector.h: Add APIDOX

2007-11-11  Inge Wallin  <inge@lysator.liu.se>

	Rename PlaceMarkModel --> MarblePlacemarkModel
	* PlaceMarkModel.h   -->  MarblePlacemarkModel.h
	* PlaceMarkModel.cpp -->  MarblePlacemarkModel.cpp
	* PlaceMarkModel_P.h -->  MarblePlacemarkModel_P.h
	* MarbleModel.{h,cpp},
	* MarbleWidget.cpp,
	* PlaceMarkManager.{h,cpp},
	* PlaceMarkLayout.cpp,
	* PlaceMarkPainter.cpp,
	* VisiblePlaceMark.{h,cpp},
	* PlaceMarkInfoDialog.cpp,
	* CMakeLists.txt: Reflect this namechange.

	APIDOX:
	* src/lib/MarbleWidget.h: More APIDOX

	Fix geodata classes according to KML spec and APIDOX:
	* src/lib/geodata/data/GeoDataFolder.h: (addFolder): removed
	(m_folderVector): removed
	(class GeoDataFolder): Added APIDOX.
	* src/lib/geodata/data/GeoDataFolder.cpp: (~GeoDataFolder): make
	empty
	(addFolder): removed
	* src/lib/geodata/data/GeoDataDocument.{h,cpp}: (class
	GeoDataDocument): Base on GeoDataContainer instead of GeoDataFolder
	(getStyle): renamed to style
	(folders): return QVector instead of QVector&
	(class GeoDataDocument): added APIDOX
	* src/lib/geodata/data/GeoDataContaner.h: Added APIDOX

	Make the GeoDataContainer follow the KML spec.
	* src/lib/geodata/data/GeoDataContainer.h (class